--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -335,7 +335,7 @@
             <span>Search Console</span>
           </div>
         </a>
-        <a href="#" class="shortcut-pill">
+        <a href="https://play.google.com/console/u/2/developers/5247559831990082412/app/4975714253861986880/app-dashboard" class="shortcut-pill">
           <div class="shortcut-icon-circle" style="background-color: #E1F5FE;">
             <%= image_tag "admin/play-console.png", alt: "Play Console" %>
           </div>
@@ -344,7 +344,7 @@
             <span>Play Console</span>
           </div>
         </a>
-        <a href="#" class="shortcut-pill">
+        <a href="https://appstoreconnect.apple.com/analytics/app/d30/6754964970/overview?iaemeasure=totalDownloads" class="shortcut-pill">
           <div class="shortcut-icon-circle" style="background-color: #F0F2F5;">
             <%= image_tag "admin/app-store.png", alt: "App Store" %>
           </div>
